# c-torrent-downloader

./: BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  build.ps1
.github/workflows/: release.yml
src/: formatters.h  main.cpp  search.h  state.h  torrent.h  ui.h
